crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__native_case_dispatches_lists_data_and_sparse_literals.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nfirst : list int -> int\nfirst xs =\n    case xs of\n        [] -> Builtin.subtractInteger 0 1\n        x :: _ -> x\ndecode : Data -> int\ndecode data =\n    case data of\n        I n -> n\n        _ -> Builtin.subtractInteger 0 2\nselect : int -> int\nselect n =\n    case n of\n        7 -> 10\n        100 -> 20\n        _ -> 30\nmain = (first [], first [42], decode (I 9), decode (B #\"\"), select 7, select 100, select (Builtin.subtractInteger 0 7))\n"
---
--- unoptimized Core
let fromInt#3 : int -> int = \value#14 : int -> value#14 in
let first#2 : list int -> int = \xs#9 : list int -> let match#11 : list int = xs#9 in
case@List match#11 of
  Nil -> subtractInteger (fromInt#3 0) (fromInt#3 1)
  Cons field#12 field#13 -> let x#10 : int = field#12 in
  x#10 in
let decode#4 : Data -> int = \data#15 : Data -> let match#17 : Data = data#15 in
let leaf#23 : @delay int = delay (subtractInteger (fromInt#3 0) (fromInt#3 2)) in
case@Data match#17 of
  DataConstr field#24 -> force leaf#23
  DataMap field#25 -> force leaf#23
  DataList field#26 -> force leaf#23
  DataI field#27 -> let n#16 : int = field#27 in
  n#16
  DataB field#28 -> force leaf#23 in
let fromBytes#7 : bytes -> bytes = \value#29 : bytes -> value#29 in
let eq#31 : int -> int -> bool = equalsInteger in
let select#8 : int -> int = \n#30 : int -> let match#34 : int = n#30 in
case@Bool (\literal#32 : int -> eq#31 literal#32 (fromInt#3 7)) match#34 of
  True -> fromInt#3 10
  False -> case@Bool (\literal#33 : int -> eq#31 literal#33 (fromInt#3 100)) match#34 of
    True -> fromInt#3 20
    False -> fromInt#3 30 in
let main#1 : (int, int, int, int, int, int, int) = constr 0 (first#2 (con (list integer) [])) (first#2 (mkCons (fromInt#3 42) (con (list integer) []))) (decode#4 ((\field#5 : int -> iData field#5) (fromInt#3 9))) (decode#4 ((\field#6 : bytes -> bData field#6) (fromBytes#7 (con bytestring #)))) (select#8 (fromInt#3 7)) (select#8 (fromInt#3 100)) (select#8 (subtractInteger (fromInt#3 0) (fromInt#3 7))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_3
    [(lam first_2
      [(lam decode_4
        [(lam fromBytes_7
          [(lam eq_31
            [(lam select_8
              [(lam main_1 main_1)
                (constr 0
                  [first_2 (con (list integer) [])]
                  [first_2
                    [[(force (builtin mkCons)) [fromInt_3 (con integer 42)]]
                      (con (list integer) [])]]
                  [decode_4 [(lam field_5 [(builtin iData) field_5]) [fromInt_3 (con integer 9)]]]
                  [decode_4
                    [(lam field_6 [(builtin bData) field_6]) [fromBytes_7 (con bytestring #)]]]
                  [select_8 [fromInt_3 (con integer 7)]]
                  [select_8 [fromInt_3 (con integer 100)]]
                  [select_8
                    [[(builtin subtractInteger) [fromInt_3 (con integer 0)]]
                      [fromInt_3 (con integer 7)]]])])
              (lam n_30
                [(lam match_34
                  (case
                    [(lam literal_32 [[eq_31 literal_32] [fromInt_3 (con integer 7)]]) match_34]
                    (case
                      [(lam literal_33 [[eq_31 literal_33] [fromInt_3 (con integer 100)]]) match_34]
                      [fromInt_3 (con integer 30)]
                      [fromInt_3 (con integer 20)])
                    [fromInt_3 (con integer 10)]))
                  n_30])])
            (builtin equalsInteger)])
          (lam value_29 value_29)])
        (lam data_15
          [(lam match_17
            [(lam leaf_23
              [(lam generated_35
                (force
                  [[[[[[(force (builtin chooseData)) generated_35] (delay (force leaf_23))]
                    (delay (force leaf_23))]
                    (delay (force leaf_23))]
                    (delay
                      [(lam field_27 [(lam n_16 n_16) field_27]) [(builtin unIData) generated_35]])]
                    (delay (force leaf_23))]))
                match_17])
              (delay
                [[(builtin subtractInteger) [fromInt_3 (con integer 0)]]
                  [fromInt_3 (con integer 2)]])])
            data_15])])
      (lam xs_9
        [(lam match_11
          (case
            match_11
            (lam field_12 (lam field_13 [(lam x_10 x_10) field_12]))
            [[(builtin subtractInteger) [fromInt_3 (con integer 0)]]
              [fromInt_3 (con integer 1)]]))
          xs_9])])
    (lam value_14 value_14)])
--- optimized Core
let first#37 : list int -> int = \xs#20 : list int -> case@List xs#20 of
  Nil -> -1
  Cons field#22 field#35 -> field#22 in
let decode#47 : Data -> int = \data#38 : Data -> let leaf#40 : @delay int = delay -2 in
case@Data data#38 of
  DataConstr field#41 -> force leaf#40
  DataMap field#42 -> force leaf#40
  DataList field#43 -> force leaf#40
  DataI field#44 -> field#44
  DataB field#46 -> force leaf#40 in
let eq#50 : int -> int -> bool = equalsInteger in
let select#55 : int -> int = \n#51 : int -> let anf#63 : int -> bool = eq#50 n#51 in
let anf#65 : bool = anf#63 7 in
case@Bool anf#65 of
  True -> 10
  False -> let anf#66 : int -> bool = eq#50 n#51 in
  let anf#68 : bool = anf#66 100 in
  case@Bool anf#68 of
    True -> 20
    False -> 30 in
let anf#69 : int = first#37 (con (list integer) []) in
let anf#72 : int = first#37 (con (list integer) [42]) in
let anf#75 : int = decode#47 (con data (I 9)) in
let anf#78 : int = decode#47 (con data (B #)) in
let anf#80 : int = select#55 7 in
let anf#82 : int = select#55 100 in
let anf#86 : int = select#55 -7 in
constr 0 anf#69 anf#72 anf#75 anf#78 anf#80 anf#82 anf#86
--- optimized UPLC
(program 1.1.0
  [(lam builtin_30
    [(lam first_4
      [(lam decode_12
        [(lam eq_13
          [(lam select_19
            [(lam anf_21
              [(lam anf_23
                [(lam anf_24
                  [(lam anf_25
                    [(lam anf_26
                      [(lam anf_27
                        [(lam anf_28 (constr 0 anf_21 anf_23 anf_24 anf_25 anf_26 anf_27 anf_28))
                          [select_19 (con integer -7)]])
                        [select_19 (con integer 100)]])
                      [select_19 (con integer 7)]])
                    [decode_12 (con data (B #))]])
                  [decode_12 (con data (I 9))]])
                [first_4 (con (list integer) [42])]])
              [first_4 (con (list integer) [])]])
            (lam n_14
              [(lam anf_15
                [(lam anf_16
                  (case
                    anf_16
                    [(lam anf_17
                      [(lam anf_18 (case anf_18 (con integer 30) (con integer 20)))
                        [anf_17 (con integer 100)]])
                      [eq_13 n_14]]
                    (con integer 10)))
                  [anf_15 (con integer 7)]])
                [eq_13 n_14]])])
          (builtin equalsInteger)])
        (lam data_5
          [(lam leaf_6
            [(lam generated_29
              (force
                (case
                  (constr 0
                    generated_29
                    (delay (force leaf_6))
                    (delay (force leaf_6))
                    (delay (force leaf_6))
                    (delay [(builtin unIData) generated_29])
                    (delay (force leaf_6)))
                  builtin_30)))
              data_5])
            (delay (con integer -2))])])
      (lam xs_1 (case xs_1 (lam field_2 (lam field_3 field_2)) (con integer -1)))])
    (force (builtin chooseData))])
--- result
(constr 0
  (con integer -1)
  (con integer 42)
  (con integer 9)
  (con integer -2)
  (con integer 10)
  (con integer 20)
  (con integer 30))
--- logs
[]
--- budget
cpu: 5049727, memory: 26403
