crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__native_list_root_requires_an_explicit_element_instance.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain = []\n"
---
--- core
let main#1 : list unit = (con (list unit) []) in
main#1
--- uplc
(program 1.1.0 [(lam i0 i0) (con (list unit) [])])
