crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__native_literal_implementations_and_default_methods_execute.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nsame : int -> int -> bool\nsame = eq\nmain = if neq (Builtin.addInteger 20 21) 42 then same 42 42 else False\n"
---
--- unoptimized Core
let fromBool#2 : bool -> bool = \value#6 : bool -> value#6 in
let not#9 : 'erased -> bool = \value#12 : 'erased -> case@Bool (\identity#13 : bool -> identity#13) value#12 of
  True -> false
  False -> true in
let eq#10 : int -> int -> bool = equalsInteger in
let neq#3 : 'erased -> 'erased -> bool = \a#7 : 'erased b#8 : 'erased -> not#9 (eq#10 a#7 b#8) in
let fromInt#4 : int -> int = \value#11 : int -> value#11 in
let same#5 : int -> int -> bool = eq#10 in
let main#1 : bool = case@Bool neq#3 (addInteger (fromInt#4 20) (fromInt#4 21)) (fromInt#4 42) of
  True -> same#5 (fromInt#4 42) (fromInt#4 42)
  False -> fromBool#2 false in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_2
    [(lam not_9
      [(lam eq_10
        [(lam neq_3
          [(lam fromInt_4
            [(lam same_5
              [(lam main_1 main_1)
                (case
                  [[neq_3
                    [[(builtin addInteger) [fromInt_4 (con integer 20)]]
                      [fromInt_4 (con integer 21)]]]
                    [fromInt_4 (con integer 42)]]
                  [fromBool_2 (con bool False)]
                  [[same_5 [fromInt_4 (con integer 42)]] [fromInt_4 (con integer 42)]])])
              eq_10])
            (lam value_11 value_11)])
          (lam a_7 (lam b_8 [not_9 [[eq_10 a_7] b_8]]))])
        (builtin equalsInteger)])
      (lam value_12
        (case [(lam identity_13 identity_13) value_12] (con bool True) (con bool False)))])
    (lam value_6 value_6)])
--- optimized Core
let eq#19 : int -> int -> bool = equalsInteger in
let anf#28 : bool = eq#19 41 42 in
let anf#34 : bool = case@Bool anf#28 of
  True -> false
  False -> true in
case@Bool anf#34 of
  True -> let anf#36 : int -> bool = eq#19 42 in
  anf#36 42
  False -> false
--- optimized UPLC
(program 1.1.0
  [(lam eq_1
    [(lam anf_2
      [(lam anf_3
        (case
          anf_3
          (con bool False)
          [(lam anf_4 [anf_4 (con integer 42)]) [eq_1 (con integer 42)]]))
        (case anf_2 (con bool True) (con bool False))])
      [[eq_1 (con integer 41)] (con integer 42)]])
    (builtin equalsInteger)])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1245974, memory: 6604
