crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__primitive_map_unwrap_retains_structural_eq.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Literal exposing (..)\nimport Eq exposing (..)\nencoded : Map Int Int\nencoded = Builtin.mapData [Builtin.mkPairData 1 2]\nnative = Builtin.unMapData encoded\nmain = eq native native\n"
---
--- unoptimized Core
let eq#2 : list (pair 'erased 'erased) -> list (pair 'erased 'erased) -> bool = \xs#4 : list (pair 'erased 'erased) ys#5 : list (pair 'erased 'erased) -> equalsData (mapData xs#4) (mapData ys#5) in
let fromInt#7 : int -> Int = iData in
let encoded#6 : Map Int Int = mapData (mkCons (mkPairData (fromInt#7 1) (fromInt#7 2)) (con (list (pair data data)) [])) in
let native#3 : list (pair Int Int) = unMapData encoded#6 in
let main#1 : bool = eq#2 native#3 native#3 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam eq_2
    [(lam fromInt_7
      [(lam encoded_6
        [(lam native_3 [(lam main_1 main_1) [[eq_2 native_3] native_3]])
          [(builtin unMapData) encoded_6]])
        [(builtin mapData)
          [[(force (builtin mkCons))
            [[(builtin mkPairData) [fromInt_7 (con integer 1)]] [fromInt_7 (con integer 2)]]]
            (con (list (pair data data)) [])]]])
      (builtin iData)])
    (lam xs_4
      (lam ys_5
        [[(builtin equalsData) [(builtin mapData) xs_4]] [(builtin mapData) ys_5]]))])
--- optimized Core
let fromInt#11 : int -> Int = iData in
let anf#17 : Int = fromInt#11 1 in
let anf#18 : Int = fromInt#11 2 in
let anf#19 : pair Int Int = mkPairData anf#17 anf#18 in
let anf#20 : list (pair Int Int) = mkCons anf#19 (con (list (pair data data)) []) in
let encoded#12 : Map Int Int = mapData anf#20 in
let native#13 : list (pair Int Int) = unMapData encoded#12 in
equalsData encoded#12 encoded#12
--- optimized UPLC
(program 1.1.0
  [(lam builtin_8
    [(lam fromInt_1
      [(lam anf_2
        [(lam anf_3
          [(lam anf_4
            [(lam anf_5
              [(lam encoded_6
                [(lam native_7 [[(builtin equalsData) encoded_6] encoded_6])
                  [(builtin unMapData) encoded_6]])
                [(builtin mapData) anf_5]])
              [[builtin_8 anf_4] (con (list (pair data data)) [])]])
            [[(builtin mkPairData) anf_2] anf_3]])
          [fromInt_1 (con integer 2)]])
        [fromInt_1 (con integer 1)]])
      (builtin iData)])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2376021, memory: 5057
