crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__record_layout_proves_adjacent_update_tails_without_field_reads.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int, c : Int, d : Int }\nupdate : Record -> int\nupdate r =\n    let\n        first = { r | a = 10 }\n    in\n    let\n        second = { r | a = 10, b = 20 }\n    in\n    let\n        third = { r | a = 10, b = 20, c = 30 }\n    in\n    Builtin.addInteger (Builtin.unIData first.a)\n        (Builtin.addInteger (Builtin.unIData second.b) (Builtin.unIData third.c))\nmain = update { a = 1, b = 2, c = 3, d = 4 }\n"
---
--- core
let fromInt#3 : int -> Int = iData in
let update#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> int = \r#4 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let base#18 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = r#4 in
let evaluated#22 : 'erased = fromInt#3 10 in
let projection#21 : list Data = unListData base#18 in
case@List projection#21 of
  Cons head#19 tail#20 -> let first#5 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = listData (mkCons evaluated#22 tail#20) in
  let base#17 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = r#4 in
  let evaluated#26 : 'erased = fromInt#3 10 in
  let evaluated#25 : 'erased = fromInt#3 20 in
  case@List tail#20 of
    Cons head#23 tail#24 -> let second#6 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = listData (mkCons evaluated#26 (mkCons evaluated#25 tail#24)) in
    let base#16 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = r#4 in
    let evaluated#31 : 'erased = fromInt#3 10 in
    let evaluated#30 : 'erased = fromInt#3 20 in
    let evaluated#29 : 'erased = fromInt#3 30 in
    case@List tail#24 of
      Cons head#27 tail#28 -> let third#7 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = listData (mkCons evaluated#31 (mkCons evaluated#30 (mkCons evaluated#29 tail#28))) in
      let projection#32 : list Data = unListData first#5 in
      case@List projection#32 of
        Cons head#8 tail#9 -> let evaluated#37 : 'erased = unIData head#8 in
        let projection#33 : list Data = unListData second#6 in
        case@List projection#33 of
          Cons head#10 tail#11 -> case@List tail#11 of
            Cons head#12 tail#13 -> let evaluated#36 : 'erased = unIData head#12 in
            let projection#34 : list Data = unListData third#7 in
            let projection#35 : list Data = dropList 2 projection#34 in
            case@List projection#35 of
              Cons head#14 tail#15 -> addInteger evaluated#37 (addInteger evaluated#36 (unIData head#14)) in
let main#1 : int = update#2 (listData (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (mkCons (fromInt#3 3) (mkCons (fromInt#3 4) (con (list data) [])))))) in
main#1
--- uplc
(program 1.1.0
  [(lam fromInt_3
    [(lam update_2
      [(lam main_1 main_1)
        [update_2
          [(builtin listData)
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]]
                  [[(force (builtin mkCons)) [fromInt_3 (con integer 4)]] (con (list data) [])]]]]]]])
      (lam r_4
        [(lam base_18
          [(lam evaluated_22
            [(lam projection_21
              (case
                projection_21
                (lam head_19
                  (lam tail_20
                    [(lam first_5
                      [(lam base_17
                        [(lam evaluated_26
                          [(lam evaluated_25
                            (case
                              tail_20
                              (lam head_23
                                (lam tail_24
                                  [(lam second_6
                                    [(lam base_16
                                      [(lam evaluated_31
                                        [(lam evaluated_30
                                          [(lam evaluated_29
                                            (case
                                              tail_24
                                              (lam head_27
                                                (lam tail_28
                                                  [(lam third_7
                                                    [(lam projection_32
                                                      (case
                                                        projection_32
                                                        (lam head_8
                                                          (lam tail_9
                                                            [(lam evaluated_37
                                                              [(lam projection_33
                                                                (case
                                                                  projection_33
                                                                  (lam head_10
                                                                    (lam tail_11
                                                                      (case
                                                                        tail_11
                                                                        (lam head_12
                                                                          (lam tail_13
                                                                            [(lam evaluated_36
                                                                              [(lam projection_34
                                                                                [(lam projection_35
                                                                                  (case
                                                                                    projection_35
                                                                                    (lam head_14
                                                                                      (lam tail_15
                                                                                        [[(builtin addInteger) evaluated_37]
                                                                                          [[(builtin addInteger) evaluated_36] [(builtin unIData) head_14]]]))
                                                                                    (error)))
                                                                                  [[(force (builtin dropList)) (con integer 2)] projection_34]])
                                                                                [(builtin unListData) third_7]])
                                                                              [(builtin unIData) head_12]]))
                                                                        (error))))
                                                                  (error)))
                                                                [(builtin unListData) second_6]])
                                                              [(builtin unIData) head_8]]))
                                                        (error)))
                                                      [(builtin unListData) first_5]])
                                                    [(builtin listData)
                                                      [[(force (builtin mkCons)) evaluated_31]
                                                        [[(force (builtin mkCons)) evaluated_30]
                                                          [[(force (builtin mkCons)) evaluated_29] tail_28]]]]]))
                                              (error)))
                                            [fromInt_3 (con integer 30)]])
                                          [fromInt_3 (con integer 20)]])
                                        [fromInt_3 (con integer 10)]])
                                      r_4])
                                    [(builtin listData)
                                      [[(force (builtin mkCons)) evaluated_26]
                                        [[(force (builtin mkCons)) evaluated_25] tail_24]]]]))
                              (error)))
                            [fromInt_3 (con integer 20)]])
                          [fromInt_3 (con integer 10)]])
                        r_4])
                      [(builtin listData) [[(force (builtin mkCons)) evaluated_22] tail_20]]]))
                (error)))
              [(builtin unListData) base_18]])
            [fromInt_3 (con integer 10)]])
          r_4])])
    (builtin iData)])
--- result
(con integer 60)
--- logs
[]
--- budget
cpu: 4749123, memory: 21400
