crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__repeated_big_record_fields_share_the_list_decoder.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype alias Record = { first : Int, second : Int }\nmain : Record -> (Int, Int)\nmain d = (d.first, d.second)\n"
---
--- core
let main#1 : { _0 : Int, _1 : Int } -> (Int, Int) = \d#2 : { _0 : Int, _1 : Int } -> let projection#9 : list Data = unListData d#2 in
case@List projection#9 of
  Cons head#3 tail#4 -> case@List tail#4 of
    Cons head#7 tail#8 -> constr 0 head#3 head#7 in
main#1
--- uplc
(program 1.1.0
  [(lam i0 i0)
    (lam i0
      [(lam i1
        (case
          i1
          (lam i2 (lam i3 (case i3 (lam i4 (lam i5 (constr 0 i2 i4))) (error))))
          (error)))
        [(builtin unListData) i0]])])
